@@ -69,7 +69,7 @@ The project's page is at http://winni.vdr-developer.org/epgsearch
 #include <langinfo.h>
 #endif
 
-static const char VERSION[]        = "0.9.25.beta3";
+static const char VERSION[]        = "0.9.25.beta4";
 static const char DESCRIPTION[]    =  trNOOP("search the EPG for repeats and more");
 
 // globals
